[gd_scene load_steps=7 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1"]

[sub_resource type="CircleShape2D" id="circle_1"]
radius = 15.0

[sub_resource type="Gradient" id="gradient_1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.5, 0, 1, 1, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="gradient_texture_1"]
gradient = SubResource("gradient_1")

[sub_resource type="ParticleProcessMaterial" id="hit_particles_mat"]
emission_shape = 1
emission_sphere_radius = 5.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 200, 0)
scale_min = 2.0
scale_max = 4.0
color_ramp = SubResource("gradient_texture_1")

[sub_resource type="ParticleProcessMaterial" id="death_particles_mat"]
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 300, 0)
scale_min = 3.0
scale_max = 6.0
color = Color(1, 0, 0, 1)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1")

[node name="Sprite2D" type="Polygon2D" parent="."]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("circle_1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -20.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HitParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("hit_particles_mat")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("death_particles_mat")
lifetime = 1.0
one_shot = true
explosiveness = 1.0
